@@ -22,8 +22,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
 import java.time.LocalDate;
-import java.time.YearMonth;
-import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
@@ -37,14 +35,16 @@ public class CloseAccountingPeriodService {
     private final AccountingPeriodRepository accountingPeriodRepository;
     private final ProcessJournalEntry processJournalEntryService;
     private final MongoTemplate mongoTemplate;
-
+    private final AccountingPeriodService accountingPeriodService;
     @Autowired
     public CloseAccountingPeriodService(AccountingPeriodRepository accountingPeriodRepository,
-                                        ProcessJournalEntry processJournalEntryService,
-                                        MongoTemplate mongoTemplate) {
+            ProcessJournalEntry processJournalEntryService,
+            AccountingPeriodService accountingPeriodService,
+            MongoTemplate mongoTemplate) {
         this.accountingPeriodRepository = accountingPeriodRepository;
         this.processJournalEntryService = processJournalEntryService;
         this.mongoTemplate = mongoTemplate;
+        this.accountingPeriodService = accountingPeriodService;
     }
 
     @Transactional
@@ -58,20 +58,22 @@ public class CloseAccountingPeriodService {
 
         // 所有账户的期末余额
         Map<String, BigDecimal> closingBalances = new HashMap<>();
-        for (Map.Entry<String, AccountAmountHolder> holderEntry:currentPeriod.getAmountHolders().entrySet()){
+        for (Map.Entry<String, AccountAmountHolder> holderEntry : currentPeriod.getAmountHolders().entrySet()) {
             closingBalances.put(holderEntry.getKey(), holderEntry.getValue().getBalance());
         }
 
-        // 1. 结转期间费用
+        // 检查是否存在下一个会计期间,如果不存在则创建一个新的会计期间
+        // 必须先创建新的会计期间,否则结转数据不能传递到下一个会计期间
+        AccountingPeriod newPeriod = accountingPeriodService.findNextPeriod(currentPeriod);
+        if (newPeriod == null) {
+            newPeriod = accountingPeriodService.createNextAccountingPeriod(currentPeriod);
+        }
+
+        // 结转期间费用
         transferPeriod(currentPeriod, closingBalances);
 
-
-
-        // 3. 检查会计恒等式
+        // 检查会计恒等式
         checkAccountingEquation(closingBalances);
-
-        // 4. 创建新的会计期间，并将当前期间的期末余额设置为新期间的期初余额
-        AccountingPeriod newPeriod = createNewAccountingPeriod(currentPeriod);
 
         // 标记当前期间为已关闭
         currentPeriod.setClosed(true);
@@ -85,22 +87,24 @@ public class CloseAccountingPeriodService {
         String accountSetId = period.getAccountSetId();
         List<Account> allAccounts = findAllLeafAccountsForClosingPeriod(accountSetId);
         Account profitAccount = findAccountByCode(allAccounts, GlobalConst.CURRENT_YEAR_PROFIT_CODE);
-       List<JournalEntryView> journalEntryViews = new ArrayList<>();
-       //结转收入
-       journalEntryViews.add(transferIncomeAccounts(findIncomeAccounts(allAccounts), period, profitAccount));
-       //结转费用和损失
-       journalEntryViews.add(transferExpenseAndLossAccounts(findExpenseAndLossAccounts(allAccounts), period, profitAccount));
-       //结转以前年度损益调整
-       journalEntryViews.add(transferPriorYearAdjustmentAccounts(findPriorYearAdjustmentAccounts(allAccounts), period, profitAccount));
-       //创建journalEntry
-      
-       for (JournalEntryView journalEntryView : journalEntryViews) {
-        if(journalEntryView!=null){
-            processJournalEntryService.processJournalEntryView(journalEntryView);
-        }else{
-            logger.info("entry is empty");
+        List<JournalEntryView> journalEntryViews = new ArrayList<>();
+        // 结转收入
+        journalEntryViews.add(transferIncomeAccounts(findIncomeAccounts(allAccounts), period, profitAccount));
+        // 结转费用和损失
+        journalEntryViews
+                .add(transferExpenseAndLossAccounts(findExpenseAndLossAccounts(allAccounts), period, profitAccount));
+        // 结转以前年度损益调整
+        journalEntryViews.add(transferPriorYearAdjustmentAccounts(findPriorYearAdjustmentAccounts(allAccounts), period,
+                profitAccount));
+        // 创建journalEntry
+
+        for (JournalEntryView journalEntryView : journalEntryViews) {
+            if (journalEntryView != null) {
+                processJournalEntryService.processJournalEntryView(journalEntryView);
+            } else {
+                logger.info("entry is empty");
+            }
         }
-       }    
     }
 
     private Account findAccountByCode(List<Account> accounts, String code) {
@@ -122,25 +126,10 @@ public class CloseAccountingPeriodService {
         }
     }
 
-    private AccountingPeriod createNewAccountingPeriod(AccountingPeriod currentPeriod) {
-        YearMonth nextMonth = YearMonth.from(currentPeriod.getEndDate()).plusMonths(1);
-        AccountingPeriod newPeriod = new AccountingPeriod();
-        newPeriod.setAccountSetId(currentPeriod.getAccountSetId());
-        newPeriod.setName(generateNextPeriodName(nextMonth));
-        newPeriod.setStartDate(nextMonth.atDay(1));
-        newPeriod.setEndDate(nextMonth.atEndOfMonth());
-        newPeriod.setAmountHolders(currentPeriod.getAmountHolders());
-        newPeriod.setClosed(false);
 
-        return accountingPeriodRepository.save(newPeriod);
-    }
 
-    private String generateNextPeriodName(YearMonth yearMonth) {
-        return yearMonth.format(DateTimeFormatter.ofPattern("yyyy年MM月"));
-    }
-
-    private Transaction createTransaction(Account account, BigDecimal amount, boolean isDebit,String description) {
-        LocalDate now=LocalDate.now();
+    private Transaction createTransaction(Account account, BigDecimal amount, boolean isDebit, String description) {
+        LocalDate now = LocalDate.now();
         Transaction transaction = new Transaction();
         transaction.setCreatedDate(now);
         transaction.setModifiedDate(now);
@@ -156,66 +145,80 @@ public class CloseAccountingPeriodService {
         return transaction;
     }
 
-    //create journalEntry
+    // create journalEntry
     private JournalEntry createJournalEntry(String accountSetId, String voucherWord) {
         JournalEntry journalEntry = new JournalEntry();
         journalEntry.setAccountSetId(accountSetId);
-        LocalDate now=LocalDate.now();
+        LocalDate now = LocalDate.now();
         journalEntry.setCreatedDate(now);
         journalEntry.setModifiedDate(now);
         journalEntry.setVoucherWord(voucherWord);
         return journalEntry;
     }
-        /**
+
+    /**
      * 查找所有需要期末结转的期间叶子账户
+     * 
      * @param accountSetId
      * @return
      **/
     public List<Account> findAllLeafAccountsForClosingPeriod(String accountSetId) {
-      List<AccountType> accountTypes =  GlobalConst.AUTO_TRANSFER_ACCOUNTS.values().stream()
-      .flatMap(List::stream).toList();
-      List<String> accountTypeValues = accountTypes.stream().map(AccountType::name).collect(Collectors.toList());
-      List<Account> accounts = mongoTemplate.find(Query.query(Criteria.where("accountSetId").is(accountSetId)
-      .and("type").in(accountTypeValues)), Account.class);
-      List<String> parentIds = accounts.stream().map(Account::getParentId).toList();
-        return accounts.stream().filter(account->!parentIds.contains(account.getId())).collect(Collectors.toList());
-    }
-    //找到期间收入账户
-    public List<Account> findIncomeAccounts(List<Account> accounts) {
-        List<AccountType> accountTypes =  GlobalConst.AUTO_TRANSFER_ACCOUNTS.get(TransferAccountType.INCOME);
-        List<String> accountTypeValues = accountTypes.stream().map(AccountType::name).toList();
-        return accounts.stream().filter(account->accountTypeValues.contains(account.getType().name())).collect(Collectors.toList());
-    }
-    //找到期间费用和损失账户
-    public List<Account> findExpenseAndLossAccounts(List<Account> accounts) {
-        List<AccountType> accountTypes =  GlobalConst.AUTO_TRANSFER_ACCOUNTS.get(TransferAccountType.ALL_EXPENSE_TYPES);
-        List<String> accountTypeValues = accountTypes.stream().map(AccountType::name).toList();
-        return accounts.stream().filter(account->accountTypeValues.contains(account.getType().name())).collect(Collectors.toList());
-    }
-    //找到以前年度损益调整账户
-    public List<Account> findPriorYearAdjustmentAccounts(List<Account> accounts) {
-        List<AccountType> accountTypes =  GlobalConst.AUTO_TRANSFER_ACCOUNTS.get(TransferAccountType.PRIOR_YEAR_ADJUSTMENT);
+        List<AccountType> accountTypes = GlobalConst.AUTO_TRANSFER_ACCOUNTS.values().stream()
+                .flatMap(List::stream).toList();
         List<String> accountTypeValues = accountTypes.stream().map(AccountType::name).collect(Collectors.toList());
-        return accounts.stream().filter(account->accountTypeValues.contains(account.getType().name())).collect(Collectors.toList());
-    } 
+        List<Account> accounts = mongoTemplate.find(Query.query(Criteria.where("accountSetId").is(accountSetId)
+                .and("type").in(accountTypeValues)), Account.class);
+        List<String> parentIds = accounts.stream().map(Account::getParentId).toList();
+        return accounts.stream().filter(account -> !parentIds.contains(account.getId())).collect(Collectors.toList());
+    }
 
-    //结转收入账户
-    public JournalEntryView transferIncomeAccounts(List<Account> incomeAccounts, AccountingPeriod period,Account profitAccount) {
+    // 找到期间收入账户
+    public List<Account> findIncomeAccounts(List<Account> accounts) {
+        List<AccountType> accountTypes = GlobalConst.AUTO_TRANSFER_ACCOUNTS.get(TransferAccountType.INCOME);
+        List<String> accountTypeValues = accountTypes.stream().map(AccountType::name).toList();
+        return accounts.stream().filter(account -> accountTypeValues.contains(account.getType().name()))
+                .collect(Collectors.toList());
+    }
+
+    // 找到期间费用和损失账户
+    public List<Account> findExpenseAndLossAccounts(List<Account> accounts) {
+        List<AccountType> accountTypes = GlobalConst.AUTO_TRANSFER_ACCOUNTS.get(TransferAccountType.ALL_EXPENSE_TYPES);
+        List<String> accountTypeValues = accountTypes.stream().map(AccountType::name).toList();
+        return accounts.stream().filter(account -> accountTypeValues.contains(account.getType().name()))
+                .collect(Collectors.toList());
+    }
+
+    // 找到以前年度损益调整账户
+    public List<Account> findPriorYearAdjustmentAccounts(List<Account> accounts) {
+        List<AccountType> accountTypes = GlobalConst.AUTO_TRANSFER_ACCOUNTS
+                .get(TransferAccountType.PRIOR_YEAR_ADJUSTMENT);
+        List<String> accountTypeValues = accountTypes.stream().map(AccountType::name).collect(Collectors.toList());
+        return accounts.stream().filter(account -> accountTypeValues.contains(account.getType().name()))
+                .collect(Collectors.toList());
+    }
+
+    // 结转收入账户
+    public JournalEntryView transferIncomeAccounts(List<Account> incomeAccounts, AccountingPeriod period,
+            Account profitAccount) {
         BigDecimal totalAmount = BigDecimal.ZERO;
-        if(incomeAccounts.isEmpty()) return null;
+        if (incomeAccounts.isEmpty())
+            return null;
         List<Transaction> transactions = new ArrayList<>();
         for (Account account : incomeAccounts) {
             BigDecimal balance = period.getAmountHolders().get(account.getId()).getBalance();
             totalAmount = totalAmount.add(balance);
             transactions.add(createTransaction(account, balance, false, "结转收入"));
         }
-        //create transaction for "本年利润"
+        // create transaction for "本年利润"
         createTransaction(profitAccount, totalAmount, true, "结转收入");
         return new JournalEntryView(createJournalEntry(period.getAccountSetId(), "结转收入"), transactions);
     }
-    //结转费用和损失账户
-    public JournalEntryView transferExpenseAndLossAccounts(List<Account> expenseAndLossAccounts, AccountingPeriod period,Account profitAccount) {
-        if(expenseAndLossAccounts.isEmpty()) return null;
+
+    // 结转费用和损失账户
+    public JournalEntryView transferExpenseAndLossAccounts(List<Account> expenseAndLossAccounts,
+            AccountingPeriod period, Account profitAccount) {
+        if (expenseAndLossAccounts.isEmpty())
+            return null;
         BigDecimal totalAmount = BigDecimal.ZERO;
         List<Transaction> transactions = new ArrayList<>();
         for (Account account : expenseAndLossAccounts) {
@@ -227,18 +230,22 @@ public class CloseAccountingPeriodService {
         return new JournalEntryView(createJournalEntry(period.getAccountSetId(), "结转费用和损失"), transactions);
     }
 
-    //结转以前年度损益调整账户
-    public JournalEntryView transferPriorYearAdjustmentAccounts(List<Account> priorYearAdjustmentAccounts, AccountingPeriod period,Account profitAccount) {
-        if(priorYearAdjustmentAccounts.isEmpty()) return null;
+    // 结转以前年度损益调整账户
+    public JournalEntryView transferPriorYearAdjustmentAccounts(List<Account> priorYearAdjustmentAccounts,
+            AccountingPeriod period, Account profitAccount) {
+        if (priorYearAdjustmentAccounts.isEmpty())
+            return null;
         BigDecimal totalAmount = BigDecimal.ZERO;
         List<Transaction> transactions = new ArrayList<>();
         for (Account account : priorYearAdjustmentAccounts) {
             BigDecimal balance = period.getAmountHolders().get(account.getId()).getBalance();
             totalAmount = totalAmount.add(balance);
             transactions.add(createTransaction(account, balance, false, "结转以前年度损益调整"));
-        }   
+        }
         createTransaction(profitAccount, totalAmount, true, "结转以前年度损益调整");
         return new JournalEntryView(createJournalEntry(period.getAccountSetId(), "结转以前年度损益调整"), transactions);
-    }   
+    }
+
+
 
 }
